<resources>
    <string name="transition_name_card">transition_name_card</string>
    <string name="transition_name_cover">transition_name_cover</string>
    <string name="transition_name_fab">transition_name_fab</string>
    <string name="transition_name_head">transition_name_head</string>


    <string name="app_name">SMusic</string>

    <string name="local_music">本地音乐</string>
    <string name="local_bill">歌单</string>
    <string name="local_album">专辑</string>

    <string name="menu_search">搜索</string>
    <string name="menu_done_all">全选</string>
    <string name="menu_edit">编辑</string>
    <string name="menu_add_song">添加歌曲</string>
    <string name="menu_clear_bill">清空歌单</string>
    <string name="menu_delete_bill">删除歌单</string>

    <string name="toolbar_title_local_song_selection">选择歌曲</string>

    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <string name="divider_artist_album_view_holder_local_song">-</string>
    <string name="error_text_length_overflow">已超过最大长度限制</string>
    <string name="error_input_empty">你输入的内容是空的?</string>
    <string name="error_already_exist">已经存在</string>
    <string name="error_empty_bill">歌单是空的</string>

    <string name="ask_exit_app">退出应用?</string>
    <string name="confirm_positive">确定</string>

    <string name="success_create_bill">歌单创建成功</string>
    <string name="success_add_songs_to_bill"> 添加成功</string>
    <string name="success_delete">删除成功</string>
    <string name="unit_song">首</string>
    <string name="bill_cannot_be_deleted">这张歌单不能删除</string>
    <string name="already_exist_in_bill">歌单中已存在</string>
    <string name="add_successfully">添加成功</string>
    <string name="please_waiting">请稍候..</string>
    <string name="ask_remove_from_bill">把它从歌单中移除?</string>
    <string name="ask_remove_from_device">把它从手机中删除?</string>
    <string name="tip">提示</string>
    <string name="ask_clear_bill">移除歌单中的所有歌曲?</string>
    <string name="ask_delete_bill">删除这张歌单?</string>
    <string name="add_to_bill">添加到歌单</string>
    <string name="album">专辑</string>
    <string name="file">文件大小</string>
    <string name="time">时长</string>
    <string name="delete">删除</string>
    <string name="select_done">选好了</string>
    <string name="no_data">没有任何一条数据</string>
    <string name="create_bill">新建歌单</string>
    <string name="bill_name">歌单名称</string>
    <string name="select_bill">选择歌单</string>
    <string name="statistic">统计</string>
    <string name="timer">定时关闭</string>
    <string name="night_mode">夜间模式</string>
    <string name="language">语言</string>
    <string name="version_update">版本更新</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>
    <string name="my_favourite">我喜欢</string>
    <string name="song">歌曲</string>
    <string name="ask_add_song_to_empty_bill">歌单是空的，去添加歌曲?</string>
    <string name="cannot_edit_bill">你不能修改这张歌单的名称</string>
    <string name="edit_bill">编辑歌单</string>
    <string name="edit_successfully">修改成功</string>
    <string name="empty_keyword">你输入的关键字是空的?</string>
    <string name="song_bill_album">歌曲/歌手/歌单/专辑</string>
    <string name="delete_local_song_successfully">删除成功</string>
    <string name="delete_local_song_unsuccessfully">删除失败</string>
    <string name="empty_local_song">没有任何本地音乐</string>
    <string name="chinese_language">中文</string>
    <string name="english_language">英文</string>
    <string name="cancel_timer">关闭定时</string>
    <string name="timer_min_15">15分钟</string>
    <string name="timer_min_30">30分钟</string>
    <string name="timer_min_60">60分钟</string>
    <string name="timer_min_120">120分钟</string>
    <string name="play_list">播放列表</string>
    <string name="clear">清空</string>
    <string name="ask_clear_play_list">清空播放列表?</string>

    <string name="tab_week_play_statistic">本周</string>
    <string name="tab_history_play_statistic">历史</string>
    <string name="play_statistic_week">本周音乐播放统计</string>
    <string name="unit_play_count">次</string>

    <string name="label_sunday">周日</string>
    <string name="label_monday">周一</string>
    <string name="label_tuesday">周二</string>
    <string name="label_wednesday">周三</string>
    <string name="label_thursday">周四</string>
    <string name="label_friday">周五</string>
    <string name="label_saturday">周六</string>
    <string name="copy_right">Copyright © 2016 Scott Inc. All Rights Reserved.</string>
    <string name="user_center">个人中心</string>
    <string name="listen_to_the_music">Listen to the Music.</string>

    <string name="menu_item_settings_recognization">听歌识曲</string>
    <string name="menu_item_settings_alarm">音乐闹钟</string>
    <string name="menu_item_settings_drive_mode">驾驶模式</string>
    <string name="menu_item_settings_effects">音效调节</string>
    <string name="menu_item_settings_more">更多设置</string>

    <string name="menu_item_settings_upgrade">检测更新</string>
    <string name="menu_item_settings_feedback">意见反馈</string>
    <string name="menu_item_settings_about">关于SMusic</string>
    <string name="test_user_name">Scott Su</string>
    <string name="test_user_description">“The only way to do great job is to love what you do.”</string>
    <string name="test_user_location">福州</string>
    <string name="total_listen">累计听歌</string>

</resources>
