<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.scott.su.smusic.ui.activity.SplashActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/margin_xl">

        <TextView
            android:id="@+id/tv_app_name_activity_splash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_display_2"
            android:translationZ="@dimen/margin_l" />

        <TextView
            android:id="@+id/tv_app_describe_activity_splash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/margin_xl"
            android:text="@string/listen_to_the_music"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_body"
            android:textStyle="italic"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_copy_right_activity_splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/margin_xs"
        android:text="@string/copy_right"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_body"
        android:translationZ="@dimen/margin_l" />
</android.support.percent.PercentRelativeLayout>
