<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_local_bill_creation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#55000000"
    tools:context="com.scott.su.smusic.ui.activity.LocalBillCreationActivity">

    <View
        android:id="@+id/view_background_activity_local_bill_creation"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_body_activity_local_bill_creation"
        android:layout_width="@dimen/width_dialog_fragment"
        android:layout_height="230dp"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:clickable="true"
        app:cardElevation="@dimen/margin_m">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:id="@+id/ll_body_activity_local_bill_creation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backgroundContent"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="@dimen/margin_xs"
            android:visibility="invisible">

            <TextView
                style="@style/TextAppearanceTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/margin_xs"
                android:text="@string/create_bill" />

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_bill_name_activity_local_bill_creation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:counterOverflowTextAppearance="?android:textAppearanceSmall"
                app:theme="@style/AppTheme.PopupOverlay">

                <android.support.design.widget.TextInputEditText
                    style="@style/TextAppearanceBodyBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bill_name"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_confirm_activity_local_bill_creation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_m"
                android:background="@drawable/selector_button_impacted"
                android:gravity="center"
                android:padding="@dimen/margin_xs"
                android:text="@string/confirm_positive"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_button" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_activity_local_bill_creation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="right|bottom"
        android:layout_margin="@dimen/margin_s"
        android:transitionName="@string/transition_name_fab"
        app:backgroundTint="@color/colorImpact"
        app:elevation="@dimen/elevation_fab_pressed"
        app:fabSize="normal"
        app:pressedTranslationZ="@dimen/elevation_fab_pressed" />
</RelativeLayout>
